--- a/public/test.html
+++ b/public/test.html
@@ -6,7 +6,14 @@
 </head>
 
 <body>
+	<header>
+		
 	<h1>Burgers</h1>
+		
+	</header>
+	
+	<div class="imageholder">
+		
 	<h2>Burgers Ready to Eat</h2>
 
 	<ul>
@@ -24,4 +31,7 @@
 	  </div>
 	  <button type="submit">Add Burger</button>
 	</form>
+
+
+	</div>
 	
